name:                coreutils
version:             0.5.0.0
synopsis:            Unix core utilities implemented in Haskell
description:         Please see README.md
homepage:            https://public.anardil.net/code/coreutils
license:             BSD3
license-file:        LICENSE
author:              Austin
maintainer:          austin@anardil.net
copyright:           2022, Austin
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

flag release
  description:         for installation
  default: False
  manual: True

library
  hs-source-dirs:
    .
  default-language:    Haskell2010
  default-extensions:  StrictData, RecordWildCards

  ghc-options:
    -Wall

  if flag(release)
    ghc-options: -O2
  else
    ghc-options: -O0

  exposed-modules:
    Coreutils.Util

    Coreutils.Awk
    Coreutils.Basename
    Coreutils.Cat
    Coreutils.Cmp
    Coreutils.Cut
    Coreutils.Dirname
    Coreutils.Echo
    Coreutils.Env
    Coreutils.Exit
    Coreutils.Head
    Coreutils.Jot
    Coreutils.Ls
    Coreutils.Mkdir
    Coreutils.Netcat
    Coreutils.Nl
    Coreutils.Nologin
    Coreutils.Pwd
    Coreutils.Random
    Coreutils.Realpath
    Coreutils.Rev
    Coreutils.Seq
    Coreutils.Sh
    Coreutils.Shuf
    Coreutils.Sleep
    Coreutils.Split
    Coreutils.Sponge
    Coreutils.Sum
    Coreutils.Tac
    Coreutils.Tee
    Coreutils.Test
    Coreutils.Tr
    Coreutils.Uniq
    Coreutils.Wc
    Coreutils.Which
    Coreutils.Whoami
    Coreutils.Yes

  build-depends:
    array,
    base >= 4.7 && < 5,
    bytestring,
    containers,
    directory,
    mtl,
    network,
    parsec,
    process,
    random-shuffle,
    random,
    regex-tdfa >= 1.3.1.1,
    resourcet,
    split,
    streaming-bytestring,
    streaming,
    text,
    time,
    unordered-containers,
    word8

executable utils
  hs-source-dirs:      src
  main-is:             main.hs
  default-language:    Haskell2010

  ghc-options:
    -Wall

  if flag(release)
    ghc-options: -O2 -threaded
  else
    ghc-options: -O0

  build-depends:
    base >= 4.7 && < 5,
    unordered-containers,
    coreutils

test-suite test
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0

  default-language:    Haskell2010
  build-depends:
    array,
    base >= 4.7 && < 5,
    bytestring,
    coreutils,
    directory,
    hspec,
    parsec,
    network,
    QuickCheck,
    random,
    split,
    streaming-bytestring,
    streaming,
    temporary,
    text,
    time,
    unordered-containers,
    word8

  other-modules:
    AwkParseSpec
    AwkSpec
    BasenameSpec
    CmpSpec
    CutSpec
    DirnameSpec
    EnvSpec
    HeadSpec
    JotSpec
    LsSpec
    MkdirSpec
    NetcatSpec
    NlSpec
    RandomSpec
    RealpathSpec
    RevSpec
    SeqSpec
    ShSpec
    ShufSpec
    SleepSpec
    SplitSpec
    SumSpec
    TacSpec
    TestSpec
    TrSpec
    UniqSpec
    WcSpec
    YesSpec

  build-tool-depends: hspec-discover:hspec-discover == 2.*
